# time_time_service

./: .gitignore  AGENTS.md  BUILD.gn  CODEOWNERS  README.md  README_zh.md  bundle.json  hisysevent.yaml  time.gni
interfaces/inner_api/: BUILD.gn  libtime_client.versionscript
interfaces/inner_api/include/: itimer_info.h  time_service_client.h  time_service_interface.h
interfaces/inner_api/src/: time_service_client.cpp
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: itimer_info.h  time_service_client.h
services/: BUILD.gn  ITimeService.idl  ITimerCallback.idl  time_blocklist.txt  time_permission.cpp  time_permission.h  time_system_ability.cpp  time_system_ability.h
services/dfx/include/: time_cmd_dispatcher.h  time_cmd_parse.h  time_sysevent.h  time_trace.h
services/dfx/src/: time_cmd_dispatcher.cpp  time_sysevent.cpp  time_trace.cpp
services/etc/: time.para
services/etc/init/: timeservice.cfg
services/ipc/base/: itimer_call_back.h  itimer_notify_callback.h  time_service_interface.h  time_service_ipc_interface_code.h
services/ipc/proxy/: time_service_proxy.cpp  time_service_proxy.h  timer_call_back_proxy.cpp  timer_call_back_proxy.h  timer_notify_call_back_proxy.h  timer_notify_callback_proxy.cpp  timer_notify_callback_proxy.h
services/ipc/proxy/inner_api_include/: time_service_proxy.h
services/ipc/stub/: time_service_stub.cpp  time_service_stub.h  timer_call_back_stub.cpp  timer_call_back_stub.h  timer_notify_call_back_stub.h  timer_notify_callback_stub.cpp
services/ipc/stub/inner_api_include/: timer_call_back_stub.h  timer_notify_callback_stub.h
services/profile/: 3702.json  BUILD.gn
services/src/: time_service.cpp
services/time/include/: event_manager.h  net_conn_subscriber.h  nitz_subscriber.h  ntp_trusted_time.h  ntp_update_time.h  power_subscriber.h  simple_timer_info.h  sntp_client.h  time_service_notify.h  time_tick_notify.h  time_zone_info.h
services/time/include/inner_api_include/: timer_call_back.h  timer_notify_callback.h
services/time/src/: event_manager.cpp  net_conn_callback_observer.cpp  net_conn_subscriber.cpp  nitz_subscriber.cpp  ntp_trusted_time.cpp  ntp_update_time.cpp  power_subscriber.cpp  simple_timer_info.cpp  sntp_client.cpp  time_service_notify.cpp  time_tick_notify.cpp  time_zone_info.cpp  timer_call_back.cpp  timer_notify_callback.cpp
services/time/test/: BUILD.gn
services/time_manager/include/: itimer_call_back.h  net_conn_callback_observer.h  nitz_subscriber.h  ntp_trusted_time.h  ntp_update_time.h  sntp_client.h  time_service.h  time_service_interface.h  time_service_notify.h  time_service_proxy.h  time_service_stub.h  time_tick_notify.h  time_zone_info.h  timer_call_back.h  timer_call_back_proxy.h  timer_call_back_stub.h  timer_notify_call_back_stub.h
services/time_manager/src/: net_conn_callback_observer.cpp  nitz_subscriber.cpp  ntp_trusted_time.cpp  ntp_update_time.cpp  sntp_client.cpp  time_service.cpp  time_service_client.cpp  time_service_notify.cpp  time_service_proxy.cpp  time_service_stub.cpp  time_tick_notify.cpp  time_zone_info.cpp  timer_call_back.cpp  timer_call_back_proxy.cpp  timer_call_back_stub.cpp  timer_notify_call_back.cpp  timer_notify_call_back_proxy.cpp  timezone.json
services/time_manager/test/: BUILD.gn
services/timer/include/: batch.h  cjson_helper.h  package_subscriber.h  time_database.h  timer_app_state_observer.h  timer_database.h  timer_database_monitor.h  timer_db_info.h  timer_handler.h  timer_info.h  timer_lock_optimizer.h  timer_manager.h  timer_manager_interface.h  timer_proxy.h  user_switch_subscriber.h
services/timer/src/: batch.cpp  cjson_helper.cpp  package_subscriber.cpp  time_database.cpp  timer_app_state_observer.cpp  timer_database.cpp  timer_database_monitor.cpp  timer_handler.cpp  timer_info.cpp  timer_lock_optimizer.cpp  timer_manager.cpp  timer_proxy.cpp  user_switch_subscriber.cpp
test/fuzztest/setname_fuzzer/: BUILD.gn  setname_fuzzer.cpp  setname_fuzzer.h
test/fuzztest/setname_fuzzer/corpus/: init
test/fuzztest/time_fuzzer/: BUILD.gn  time_fuzzer.cpp  time_fuzzer.h
test/fuzztest/time_fuzzer/corpus/: init
test/fuzztest/timeservice_fuzzer/: BUILD.gn  timeservice_fuzzer.cpp  timeservice_fuzzer.h
test/fuzztest/timeservice_fuzzer/common/: time_service_fuzz_utils.cpp  time_service_fuzz_utils.h
test/fuzztest/timeservice_fuzzer/corpus/: init
test/fuzztest/timeservice_fuzzer/timeboundarycode_fuzzer/: timeboundarycode_fuzzer.cpp  timeboundarycode_fuzzer.h
test/fuzztest/timeservice_fuzzer/timecreatetimer_fuzzer/: timecreatetimer_fuzzer.cpp  timecreatetimer_fuzzer.h
test/fuzztest/timeservice_fuzzer/timedestroytimer_fuzzer/: timedestroytimer_fuzzer.cpp  timedestroytimer_fuzzer.h
test/fuzztest/timeservice_fuzzer/timegetboottimemilli_fuzzer/: timegetboottimemilli_fuzzer.cpp  timegetboottimemilli_fuzzer.h
test/fuzztest/timeservice_fuzzer/timegetboottimenano_fuzzer/: timegetboottimenano_fuzzer.cpp  timegetboottimenano_fuzzer.h
test/fuzztest/timeservice_fuzzer/timegetmonotimemilli_fuzzer/: timegetmonotimemilli_fuzzer.cpp  timegetmonotimemilli_fuzzer.h
test/fuzztest/timeservice_fuzzer/timerproxy_fuzzer/: timerproxy_fuzzer.cpp  (+1 more)
test/fuzztest/timesetname_fuzzer/: BUILD.gn  timesetname_fuzzer.cpp  timesetname_fuzzer.h
test/unittest/: BUILD.gn
test/unittest/js_test/: BUILD.gn
test/unittest/native_test/: BUILD.gn  time_service_native_test.cpp
test/unittest/service_test/: BUILD.gn
test/unittest/src/: time_dfx_test.cpp
tools/ohos-query-time-cli/: BUILD.gn  README.md  config.json  ohos-queryTime.json
tools/ohos-query-time-cli/docs/: README.md
tools/ohos-query-time-cli/include/: commands.h  utils.h
tools/ohos-query-time-cli/src/: commands.cpp  main.cpp  utils.cpp
tools/ohos-query-time-cli/tests/: TEST.md
utils/: BUILD.gn
utils/mock/include/: mock_permission.h
utils/native/include/: time_common.h  time_file_utils.h  time_hilog.h  time_hilog_wreapper.h  time_permission.h  time_xcollie.h
utils/native/src/: time_common.cpp  time_file_utils.cpp  time_permission.cpp  time_xcollie.cpp
utils/native/test/: BUILD.gn
(+206 files in other folders)
