# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../time.gni")

config("time_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${api_path}/include",
    "../utils/native/include",
    "time/include",
    "time/include/inner_api_include",
    "timer/include",
    "dfx/include",
    "ipc/base",
    "ipc/proxy",
    "ipc/stub",
    "ipc/stub/inner_api_include",
    "${time_service_path}",
  ]
}

ohos_shared_library("time_system_ability") {
  configs = [ "${time_utils_path}:utils_config" ]
  configs += [ ":time_service_config" ]
  configs += [ "//build/config/gcc:symbol_visibility_hidden" ]
  sources = [
    "./time_system_ability.cpp",
    "dfx/src/time_cmd_dispatcher.cpp",
    "dfx/src/time_cmd_parse.cpp",
    "dfx/src/time_sysevent.cpp",
    "ipc/proxy/timer_call_back_proxy.cpp",
    "ipc/stub/time_service_stub.cpp",
    "ipc/stub/timer_notify_callback_stub.cpp",
    "time/src/itimer_info.cpp",
    "time/src/net_conn_callback_observer.cpp",
    "time/src/nitz_subscriber.cpp",
    "time/src/ntp_trusted_time.cpp",
    "time/src/ntp_update_time.cpp",
    "time/src/power_subscriber.cpp",
    "time/src/simple_timer_info.cpp",
    "time/src/sntp_client.cpp",
    "time/src/time_service_notify.cpp",
    "time/src/time_tick_notify.cpp",
    "time/src/time_zone_info.cpp",
    "time/src/timer_notify_callback.cpp",
    "timer/src/batch.cpp",
    "timer/src/timer_database.cpp",
    "timer/src/timer_handler.cpp",
    "timer/src/timer_info.cpp",
    "timer/src/timer_manager.cpp",
    "timer/src/timer_proxy.cpp",
  ]

  deps = [ "${time_utils_path}:time_utils" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_single",
    "netmanager_base:net_conn_manager_if",
    "relational_store:native_appdatafwk",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  defines = []
  if (device_standby) {
    external_deps += [ "device_standby:standby_innerkits" ]
    defines += [ "DEVICE_STANDBY_ENABLE" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager)) {
    external_deps += [ "power_manager:powermgr_client" ]
    defines += [ "POWER_MANAGER_ENABLE" ]
  }

  branch_protector_ret = "pac_ret"
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = time_sanitize_debug
  }
  part_name = "time_service"
  subsystem_name = "time"
}

ohos_static_library("time_system_ability_static") {
  configs = [ "${time_utils_path}:utils_config" ]
  configs += [ ":time_service_config" ]
  configs += [ "//build/config/gcc:symbol_visibility_hidden" ]
  sources = [
    "./time_system_ability.cpp",
    "dfx/src/time_cmd_dispatcher.cpp",
    "dfx/src/time_cmd_parse.cpp",
    "dfx/src/time_sysevent.cpp",
    "ipc/proxy/timer_call_back_proxy.cpp",
    "ipc/stub/time_service_stub.cpp",
    "ipc/stub/timer_notify_callback_stub.cpp",
    "time/src/itimer_info.cpp",
    "time/src/net_conn_callback_observer.cpp",
    "time/src/nitz_subscriber.cpp",
    "time/src/ntp_trusted_time.cpp",
    "time/src/ntp_update_time.cpp",
    "time/src/power_subscriber.cpp",
    "time/src/simple_timer_info.cpp",
    "time/src/sntp_client.cpp",
    "time/src/time_service_notify.cpp",
    "time/src/time_tick_notify.cpp",
    "time/src/time_zone_info.cpp",
    "time/src/timer_notify_callback.cpp",
    "timer/src/batch.cpp",
    "timer/src/timer_database.cpp",
    "timer/src/timer_handler.cpp",
    "timer/src/timer_info.cpp",
    "timer/src/timer_manager.cpp",
    "timer/src/timer_proxy.cpp",
  ]

  deps = [ "${time_utils_path}:time_utils" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbeget_proxy",
    "ipc:ipc_single",
    "netmanager_base:net_conn_manager_if",
    "relational_store:native_appdatafwk",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  defines = []
  if (device_standby) {
    external_deps += [ "device_standby:standby_innerkits" ]
    defines += [ "DEVICE_STANDBY_ENABLE" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager)) {
    external_deps += [ "power_manager:powermgr_client" ]
    defines += [ "POWER_MANAGER_ENABLE" ]
  }

  branch_protector_ret = "pac_ret"
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = time_sanitize_debug
  }
  part_name = "time_service"
  subsystem_name = "time"
}
