# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/miscservices/time/time.gni")
import("//build/ohos.gni")

config("time_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${time_service_path}/time_manager/include",
    "include",
    "//utils/native/base/include",
    "${time_utils_path}/native/include",
  ]
}

ohos_shared_library("time_client") {
  sources = [
    "${time_service_path}/time_manager/src/itimer_info.cpp",
    "${time_service_path}/time_manager/src/time_service_client.cpp",
    "${time_service_path}/time_manager/src/time_service_proxy.cpp",
    "${time_service_path}/time_manager/src/time_service_stub.cpp",
    "${time_service_path}/time_manager/src/timer_call_back.cpp",
    "${time_service_path}/time_manager/src/timer_call_back_proxy.cpp",
    "${time_service_path}/time_manager/src/timer_call_back_stub.cpp",
  ]

  configs = [ ":time_client_config" ]
  public_configs = [ ":time_client_config" ]
  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "${time_utils_path}:time_utils",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "miscservices"
  part_name = "time_native"
}
