# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../time.gni")

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${api_path}/include",
    "${time_service_path}/time/test/unittest/include",
    "${time_utils_path}/native/include",
    "${time_service_path}/time/include",
    "${time_service_path}",
    "${time_service_path}/dfx/include",
    "${time_service_path}/ipc/stub",
    "${time_service_path}/ipc/base",
    "${time_service_path}/timer/include",
  ]
}

module_output_path = "time_service/time_dfx"

ohos_unittest("TimeDfxTest") {
  module_out_path = module_output_path

  sources = [ "src/time_dfx_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "../../interfaces/inner_api:time_client",
    "../../services:time_service_static",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true

  deps = [ ":TimeDfxTest" ]
}
