# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("ohos-query-time") {
  sources = [
    "src/main.cpp",
    "src/commands.cpp",
    "src/utils.cpp",
  ]

  include_dirs = [
    "//base/time/time_service/tools/ohos-query-time-cli/include",
    "//base/time/time_service/interfaces/inner_api/include",
  ]

  cflags = [
    "-fPIC",
    "-g",
  ]
  cflags += [ "-Wall" ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  cflags_cc = cflags

  deps = [
    "//base/time/time_service/interfaces/inner_api:time_client",
  ]

  external_deps = [
    "hilog:libhilog",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  install_enable = true
  install_images = ["system"]
  relative_install_dir = "cli_tool/executable"

  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "time"
  part_name = "time_service"
}
