# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("../../../time.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("SetnameFuzzer") {
  module_out_path = "time_service/time_service"

  include_dirs = [
    "${time_utils_path}/../interfaces/inner_api/include",
    "${time_utils_path}/native/include",
    "${time_service_path}/time/include",
    "${time_service_path}/time/include/inner_api_include",
    "${time_service_path}/timer/include",
  ]

  cflags = ["-g","-O0","-Wno-unused-variable","-fno-omit-frame-pointer"]
  sources = [
    "setname_fuzzer.cpp",
  ]
  
  public_configs = [
    "${time_service_path}:time_service_gen_config",
  ]

  deps = [ "${time_service_path}:timeservice_proxy" ]
  external_deps = [
    "ability_base:configuration",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":SetnameFuzzer",
  ]
}
###############################################################################
