# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("TimeServiceFuzzTest") {
  module_out_path = "miscservices/time"

  fuzz_config_file = "//base/miscservices/time/test/fuzztest/timeservice_fuzzer"

  include_dirs = [
    "//base/miscservices/time/services/time_manager/include",
    "//base/miscservices/time/services/time_manager/include",
    "//base/miscservices/time/services/timer/include",
    "//base/miscservices/time/utils/mock/include",
    "//base/miscservices/time/interfaces/innerkits/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "timeservice_fuzzer.cpp" ]

  deps = [
    "//base/miscservices/time/interfaces/innerkits:time_client",
    "//base/miscservices/time/services:time_service",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core:appexecfwk_core",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",        
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "common_event_service:cesfwk_innerkits",
    "dataability:native_dataability",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":TimeServiceFuzzTest",
  ]
}
###############################################################################
