# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("../../../time.gni")

##############################fuzztest##########################################
ohos_fuzztest("TimeServiceFuzzTest") {
  module_out_path = "time/time_service"

  fuzz_config_file = "${time_root_path}/test/fuzztest/timeservice_fuzzer"

  include_dirs = [
    "${time_service_path}",
    "${time_service_path}/dfx/include",
    "${time_service_path}/time/include",
    "${time_utils_path}/native/include",
    "${time_service_path}/ipc/stub",
    "${time_service_path}/ipc/base",
    "${api_path}/include",
    "${time_service_path}/timer/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "timeservice_fuzzer.cpp" ]

  deps = [
    "${time_service_path}:time_service_static",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":TimeServiceFuzzTest",
  ]
}
###############################################################################
